<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:paddingTop="32dp"
        android:paddingBottom="60dp">

        <TextView
            android:id="@+id/txt_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/sf_pro_display_bold"
            android:text="@string/txt_login_header"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/txt_sub_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/sf_pro_display_regular"
            android:text="@string/txt_login_subheader"
            android:textColor="@color/light_gray"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txt_email_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="72dp"
            android:fontFamily="@font/sf_pro_display_regular"
            android:text="@string/txt_email"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/txt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:background="@android:color/transparent"
            android:fontFamily="@font/sf_pro_display_semibold"
            android:hint="@string/txt_email_hint"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            android:textColorHint="@color/light_gray"
            android:textSize="16sp" />

        <View
            android:id="@+id/v1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="@color/light_gray" />

        <TextView
            android:id="@+id/txt_password_heading"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/sf_pro_display_regular"
            android:text="@string/txt_password"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/txt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:background="@android:color/transparent"
            android:fontFamily="@font/sf_pro_display_semibold"
            android:hint="@string/txt_password_hint"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textColorHint="@color/light_gray"
            android:textSize="16sp" />

        <View
            android:id="@+id/v2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="@color/light_gray" />

        <TextView
            android:id="@+id/txt_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/sf_pro_display_regular"
            android:text=""
            android:textColor="@color/highlight_text_color"
            android:textSize="12sp" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/la_loading"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_230sdp"
            app:lottie_speed="1"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_fileName="anim_loading.json"
            android:visibility="gone"/>


        <Button
            android:id="@+id/btn_login"
            style="@style/Widget.Material3.Button"
            android:backgroundTint="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/sf_pro_display_bold"
            android:text="@string/txt_login"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/btn_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/sf_pro_display_semibold"
            android:text="@string/txt_no_account_signup"
            android:textSize="14sp" />


<!--        <LinearLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:orientation="horizontal"-->
<!--            android:gravity="center"-->
<!--            android:layout_marginTop="8dp">-->


<!--            <ImageView-->
<!--                android:id="@+id/iv_google_login"-->
<!--                android:layout_width="58dp"-->
<!--                android:layout_height="58dp"-->
<!--                android:layout_marginEnd="16dp"-->
<!--                android:background="?attr/selectableItemBackground"-->
<!--                android:clickable="true"-->
<!--                android:contentDescription="Google Signup"-->
<!--                android:focusable="true"-->
<!--                android:padding="8dp"-->
<!--                android:scaleType="centerInside"-->
<!--                android:src="@drawable/ic_google" />-->

<!--            <ImageView-->
<!--                android:id="@+id/iv_otp_login"-->
<!--                android:layout_width="58dp"-->
<!--                android:layout_height="58dp"-->
<!--                android:src="@drawable/ic_phone"-->
<!--                android:contentDescription="OTP Signup"-->
<!--                android:background="?attr/selectableItemBackground"-->
<!--                android:padding="8dp"-->
<!--                android:scaleType="centerInside"-->
<!--                android:clickable="true"-->
<!--                android:focusable="true" />-->

<!--        </LinearLayout>-->
<!-- not able to resolve dependency for spinkit -->
<!--        <com.github.ybq.android.spinkit.SpinKitView-->
<!--            android:visibility="gone"-->
<!--            xmlns:app="http://schemas.android.com/apk/res-auto"-->
<!--            android:id="@+id/progress_bar"-->
<!--            android:indeterminate="true"-->
<!--            style="@style/SpinKitView.ThreeBounce"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_gravity="center"-->
<!--            app:SpinKit_Color="@color/black" />-->





    </LinearLayout>








</ScrollView>