<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="20dp"

        android:paddingBottom="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/sf_pro_display_bold"
            android:text="@string/txt_register_header"
            android:textColor="@color/black"
            android:textSize="30dp" />


        <!-- Round Image with Upload Icon -->
<!--        <RelativeLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent"-->
<!--            android:gravity="center"-->
<!--            android:layout_marginTop="15dp">-->

<!--            <FrameLayout-->
<!--                android:layout_width="120dp"-->
<!--                android:layout_height="120dp"-->
<!--                android:layout_centerInParent="true"-->
<!--                android:layout_marginBottom="20dp">-->

<!--                <de.hdodenhof.circleimageview.CircleImageView-->
<!--                    android:id="@+id/user_image"-->
<!--                    android:layout_width="120dp"-->
<!--                    android:layout_height="120dp"-->
<!--                    android:src="@drawable/ic_profile"-->
<!--                    app:civ_border_color="#FF000000"-->
<!--                    app:civ_border_width="2dp" />-->

<!--                <ImageView-->
<!--                    android:id="@+id/upload_icon"-->
<!--                    android:layout_width="32dp"-->
<!--                    android:layout_height="32dp"-->
<!--                    android:layout_gravity="bottom|end"-->
<!--                    android:layout_margin="4dp"-->
<!--                    android:src="@drawable/ic_camera"-->
<!--                    android:background="@drawable/circle_background_white"-->
<!--                    android:padding="4dp"-->
<!--                    android:contentDescription="Upload Icon" />-->
<!--            </FrameLayout>-->
<!--        </RelativeLayout>-->



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/sf_pro_display_regular"
            android:text="@string/txt_username"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/txt_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:background="@android:color/transparent"
            android:fontFamily="@font/sf_pro_display_semibold"
            android:hint="@string/txt_username_hint"
            android:textColor="@color/black"
            android:textColorHint="@color/light_gray"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="@color/light_gray" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/sf_pro_display_regular"
            android:text="@string/txt_email"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/txt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:background="@android:color/transparent"
            android:fontFamily="@font/sf_pro_display_semibold"
            android:hint="@string/txt_email_hint"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            android:textColorHint="@color/light_gray"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="@color/light_gray" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/sf_pro_display_regular"
            android:text="@string/txt_password"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/txt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:background="@android:color/transparent"
            android:fontFamily="@font/sf_pro_display_semibold"
            android:hint="@string/txt_password_hint"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textColorHint="@color/light_gray"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="@color/light_gray" />

        <TextView
            android:id="@+id/txt_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:fontFamily="@font/sf_pro_display_regular"
            android:text=""
            android:textColor="@color/highlight_text_color"
            android:textSize="12sp" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/las_loading"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:lottie_speed="1"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_fileName="anim_loading.json"
            android:visibility="gone"/>

        <Button
            android:id="@+id/btn_sign_up"
            style="@style/Widget.Material3.Button"
            android:backgroundTint="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sf_pro_display_bold"
            android:text="@string/txt_sign_up"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/sf_pro_display_semibold"
            android:text="@string/txt_already_have_account"
            android:textSize="16dp" />

<!--        <LinearLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:orientation="horizontal"-->
<!--            android:gravity="center"-->
<!--            android:layout_marginTop="8dp">-->

<!--            <ImageView-->
<!--                android:id="@+id/iv_google_signup"-->
<!--                android:layout_width="58dp"-->
<!--                android:layout_height="58dp"-->
<!--                android:src="@drawable/ic_google"-->
<!--                android:contentDescription="Google Signup"-->
<!--                android:layout_marginEnd="16dp"-->
<!--                android:background="?attr/selectableItemBackground"-->
<!--                android:padding="8dp"-->
<!--                android:scaleType="centerInside"-->
<!--                android:clickable="true"-->
<!--                android:focusable="true" />-->


<!--            <ImageView-->
<!--                android:id="@+id/iv_otp_signup"-->
<!--                android:layout_width="58dp"-->
<!--                android:layout_height="58dp"-->
<!--                android:src="@drawable/ic_phone"-->
<!--                android:contentDescription="OTP Signup"-->
<!--                android:background="?attr/selectableItemBackground"-->
<!--                android:padding="8dp"-->
<!--                android:scaleType="centerInside"-->
<!--                android:clickable="true"-->
<!--                android:focusable="true" />-->

<!--        </LinearLayout>-->

        <!--        <com.github.ybq.android.spinkit.SpinKitView-->
        <!--            android:visibility="gone"-->
        <!--            xmlns:app="http://schemas.android.com/apk/res-auto"-->
        <!--            android:id="@+id/progress_bar"-->
        <!--            android:indeterminate="true"-->
        <!--            style="@style/SpinKitView.ThreeBounce"-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_gravity="center"-->
        <!--            app:SpinKit_Color="@color/black" />-->


    </LinearLayout>


</ScrollView>